--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -654,7 +654,7 @@ Parallelizing a computation is possible when dependencies between
       password. These keys should be generated using the command
       \texttt{ssh-keygen}. Run \emph{e.g.} \texttt{ssh-keygen -t dsa} on 
       master node, enter no passphrase and add resulting 
-      \texttt{.ssh/id_dsa.pub} to \texttt{.ssh/authorized_keys} 
+      \texttt{.ssh/id\_dsa.pub} to \texttt{.ssh/authorized\_keys} 
       on all the slave nodes.}
   \item{The machine names listed in the file \texttt{.mcstas-hosts} in
       your home directory or in the \texttt{MCSTAS/tools/perl/mcstas-hosts} on
