--- a/trunk/abstract_comp.tex
+++ b/trunk/abstract_comp.tex
@@ -1,10 +1,10 @@
 The software package McStas is a tool for carrying out Monte Carlo
 ray-tracing simulations of neutron scattering instruments with high
 complexity and precision. The simulations can compute all aspects of the
-performance of instruments and can thus be used to optimize the use of
-existing equipment, design new instrumentation, and carry out virtual
-experiments. McStas
-is based on a unique design where an automatic compilation process
+performance of instruments and samples 
+and can thus be used to optimize the use of existing equipment, 
+design new instrumentation, and carry out full virtual experiments. 
+McStas is based on a unique design where an automatic compilation process
 translates high-level textual instrument descriptions into efficient
 ANSI-C code. This design makes it simple to set up typical simulations
 and also gives essentially unlimited freedom to handle more unusual
