--- a/trunk/abstractpage_comp.tex
+++ b/trunk/abstractpage_comp.tex
@@ -1,37 +1,32 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \begin{abstract}
-\input{abstract_comp}
+\input{abstract}
 \end{abstract}
 
 \vskip\baselineskip\noindent
-This library component report documents \MCS version \version, released \reldate
+This report documents McStas version \version, released May 1, 2005.
 \vskip\baselineskip\noindent
 The authors are:
 \begin{quote}
 \label{p:authors}
-Kim Lefmann \verb+<kim.lefmann@risoe.dk>+ \\
-Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark 
+\vskip\baselineskip\noindent
+Peter Kj\ae r Willendrup \\
+Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark \\
+email: \verb+peter.willendrup@risoe.dk+
+\vskip\baselineskip\noindent
+Kim Lefmann \\
+Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark \\
+email: \verb+kim.lefmann@risoe.dk+
+\vskip\baselineskip\noindent
+Emmanuel Farhi \\
+Institut Laue-Langevin, Grenoble, France \\
+email: \verb+farhi@ill.fr+ \\
 
-Peter Kj\ae r Willendrup \verb+<peter.willendrup@risoe.dk>+ \\
-Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark 
-
-Emmanuel Farhi \verb+<farhi@ill.fr>+ \\
-Institut Laue-Langevin, Grenoble, France 
-
-Mark Hagen \verb+<mhz@ansto.gov.au>+ \\
-Australian Nuclear Science and technology Organization, Sydney, Australia 
+Klaus Lieutenant \\
+Institut Laue-Langevin, Grenoble, France \\
+email: \verb+lieutenant@ill.fr+
 \end{quote}
-as well as authors who left the project:
-\begin{quote}
-Per-Olof {\AA}strand \verb+<per-olof.aastrand@risoe.dk>+\\
-Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark 
-
-Kristian Nielsen \verb+<kn@sifira.dk>+ \\
-Materials Research Department, Ris{\o} National Laboratory, Roskilde, Denmark 
-Present address: Sifira A/S, Copenhagen, Denmark, 
-\end{quote}
-and many users that have contributed to components of the \MCS library.
 %Front page illustration:\\[\baselineskip]
 %Simulated scattering from a vanadium sample
 %taking into account the secondary extinction. See
