--- a/trunk/preface_comp.tex
+++ b/trunk/preface_comp.tex
@@ -5,21 +5,24 @@
 This document contains information on the neutron scattering components 
 which are the building blocks for describing instruments 
 in the Monte Carlo neutron
-ray-tracing program \MCS\ version \version . This is an update to the initial
-release in October 1998 of version 1.0 as presented in Ref.~\cite{nn_10_20}. 
+ray-tracing program \MCS\ version \version . The initial
+release in October 1998 of version 1.0 was presented in Ref.~\cite{NNews}. 
 The reader of this
 document is not supposed to have specific knowledge of neutron scattering,
 but some basic understanding of the underlying physics is helpful in
 understanding the theoretical background for the component functionality. 
 For details about simulation techniques, we refer to 
-the McStas system manual \cite{mcstasmanual}.
+the \MCS\ system manual \cite{mcstasmanual}.
 We assume familiarity with the use of 
 the C programming language.
 
 We especially like to thank Kristian Nielsen for laying a solid foundation
-for the \MCS\ system, which the authors of this manual are using daily.
-It is also a pleasure to thank Prof.~Kurt N.~Clausen for his continuous
+for the \MCS\ system, which the authors of this manual benefit from daily.
+Also Per-Olof \AA strand has contributed to the development of
+the \MCS\ system.
+It is a pleasure to thank Dir.~Kurt N.~Clausen for his continuous
 support to \MCS\ and for having initiated the project.
+Continuous support to \MCS\ has also come from Prof.~Robert McGreevy.
 %Both he and our other collaborators, Henrik M.\ R\o nnow and Mark
 %Hagen have made major contributions to the project.  Also the
 %contributions from our test users, the students Asger Abrahamsen, Niels
@@ -27,7 +30,7 @@ support to \MCS\ and for having initiated the project.
 %gave us an excellent opportunity to pinpoint a vast amount of serious
 %errors in the test version.  Useful comments to this document itself
 %have been given by Bella Lake and Alan Tennant.  
-We have also benefited
+We have further benefited
 from discussions with many other people in the neutron scattering
 community, too numerous to mention here.
 
@@ -47,13 +50,22 @@ contact the authors at \verb+mcstas@risoe.dk+
 or consult the \MCS\ WWW home page~\cite{mcstas_webpage}.
 
 Important developments on the component side in \MCS\ version \version\ 
-as compared to version 1.4 (the last version of the component manual) are listed in section~\ref{s:new-features:components}.
+as compared to version 1.4 (the last version of the component manual) include
 
-This project has been supported by the European Union, initially
-through the ``XENNI'' network and ``Cool Neutrons'' RTD program, later
-through the ``SCANS'' network, and today the ``MCNSI`` network package.
+\begin{itemize}
+\item ... so much that I do not know what to say...
+\end{itemize} 
 
-If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@risoe.dk+ email list, send us a smiley message, and contribute to the package.
+The \MCS\ project has been supported by the European Union, initially
+through the XENNI program and the RTD ``Cool Neutrons'' program in FP4,
+In FP5, \MCS\ was supported strongly through the
+``SCANS'' program. 
+Currently, in FP6, \MCS\ is supported through the Joint Research Activity
+``MCNSI'' under the Integrated Infrastructure Initiative ``NMI3'', see
+the WWW home pages~\cite{mcnsi_webpage,nmi3_webpage}
+
+
+
 
 
 
