--- a/trunk/risoe-rep_comp-title.tex
+++ b/trunk/risoe-rep_comp-title.tex
@@ -35,11 +35,11 @@
  \space\number\year }
 
 \let\reportlan=\relax
-\def\month{10}                   % Released in May
+\def\month{5}                   % Released in May 2005
 % Need to match front page line breaking.
 \title{Component~Manual~for~\rlap{the}\\ % Avoid overfull message.
  Neutron~Ray-Tracing~Package\\
  \MCS,\\ Version \version\ }
-\author{Peter Kj\ae r Willendrup, Kim Lefmann, and Emmanuel Farhi}
+\author{Peter Kj\ae r Willendrup, Kim Lefmann, Emmanuel Farhi, and Klaus Lieutenant}
 \maketitle
 \endgroup
